# hud

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: release.yml  unit-tests.yml
spec/: hud-initial-spec.md
src/: help.css  help.html  hud.css  hud.html  hud.js  settings.css  settings.html  settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  main.rs  osc.rs
